REGRESSION (r251385): box-shadow interferes with backdrop-filter https://bugs.webkit.org/show_bug.cgi?id=208070 <rdar://problem/59683152>

Reviewed by Dean Jackson.

Source/WebCore:

updateClippingStrategy() compares the rounded rect passed in with the geometry
of the first layer argument, so the rect needs to have a zero origin. We do
the same computation in GraphicsLayerCA::updateContentsRects().

Test: compositing/filters/backdrop-filter-rect.html

* platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::updateBackdropFiltersRect):

LayoutTests:

* compositing/filters/backdrop-filter-rect-expected.html: Added.
* compositing/filters/backdrop-filter-rect.html: Added.

Canonical link: https://commits.webkit.org/222470@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258985 268f45cc-cd09-0410-ab3c-d52691b4dbfc